2008-09-03  Werner Koch  <wk@g10code.com>

	* manual/Makefile.am (pkgdata_DATA): Remove einsteiger.pdf and
	durchblicker.pdf. 
	(all-local): Ditto.
	(%.html.d): New.
	(all-local): Build compendium html version.

2008-08-21  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* manual/gpg4win-compendium-de.tex, manual/fdl-book.tex:
	Added xname for improved hyperlatex output.

2008-08-29  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	Making "make distcheck" work.

	* manual/Makefile.am: Added fdl-book.tex to EXTRA_DIST.

2008-08-21  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* manual/gpg4win-compendium-de.tex, manual/fdl-book.tex:
	Many improvements for hyperlatex output.
	Resolved macros.tex input (because moved to
	gpg4win-compendium-de.tex and modified).

2008-08-22  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* manual/gpg4win-compendium-de.tex, manual/Makefile.am:
	Improved appendix. Added new screenshots. Added new fdl file for
	latex book style.

2008-08-21  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* manual/gpg4win-compendium-de.tex:
	Improved last chapters (23 to 26) of part two.

2008-08-19  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* manual/version.tex.in: Added compendiumVersionDE and compendiumDateDE.

	* manual/gpg4win-compendium-de.tex: Various little fixes and improves
	all over part 1.

2008-08-19  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* manual/gpg4win-compendium-de.tex, manual/Makefile.am:
	Reworked some chapter in part two and added a new screenshot.

2008-08-15  Bernhard Reiter <bernhard.reiter@intevation.de>

	* README-de.txt: fixed one minor typo.

2008-08-14  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* website/ShortStudy-Sustainable-FS-example-Gpg4win.htm4,
	website/Kurzstudie-Nachhaltige-FS-Beispiel-Gpg4win.htm4:
	Update pdf download link.

2008-08-13  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* manual/gpg4win-compendium-de.tex, manual/Makefile.am: